--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,7 @@
 theme: jekyll-theme-hacker
+   { themeVariable: '--ion-color-primary', value: '#222020'},
+   { themeVariable: '--ion-item-color', value: '#000'},
+   { themeVariable: '--ion-color-text', value: '#000'},
+   { themeVariable: '--ion-background-color', value: '#ffffff'},
+   { themeVariable: '--ion-card-text', value: '#222020'},
+   { themeVariable: '--ion-title-text', value: '#ffffff'}
